--- a/greetings.html
+++ b/greetings.html
@@ -18,7 +18,7 @@
 
         .widget {
             padding: 5px 5px ;
-            color: #000000;
+            color: #9ACBD0;
             display: flex;
             justify-content:center;
             align-items:center;
