--- a/greetings.html
+++ b/greetings.html
@@ -18,22 +18,22 @@
 
         .widget {
             padding: 5px 5px ;
-            color: #9ACBD0;
+            color: #27548A;
             display: flex;
             justify-content:center;
             align-items:center;
             flex-direction: column;
             max-width: 95%;
             margin: auto;
-            border: 3px solid #9ACBD0;
+            border: 3px solid #27548A;
             border-radius: 5px;
-            box-shadow: 2px 2px 1px 0px #9ACBD0;
+            box-shadow: 2px 2px 1px 0px #27548A;
 
         }
 
            
         .greet{
-            font-size: 3em;
+            font-size: 2em;
         }
 
         .date {
