--- a/greetings.html
+++ b/greetings.html
@@ -18,16 +18,16 @@
 
         .widget {
             padding: 5px 5px ;
-            color: #27548A;
+            color: #81BFDA;
             display: flex;
             justify-content:center;
             align-items:center;
-            flex-direction: column;
+            
             max-width: 95%;
             margin: auto;
-            border: 3px solid #27548A;
+            border: 3px solid #81BFDA;
             border-radius: 5px;
-            box-shadow: 2px 2px 1px 0px #27548A;
+            box-shadow: 2px 2px 1px 0px #81BFDA;
 
         }
 
