--- a/greetings.html
+++ b/greetings.html
@@ -22,7 +22,7 @@
             display: flex;
             justify-content:center;
             align-items:center;
-            
+            flex-direction:column;
             max-width: 95%;
             margin: auto;
             border: 3px solid #81BFDA;
