--- a/greetings.html
+++ b/greetings.html
@@ -18,16 +18,16 @@
 
         .widget {
             padding: 5px 5px ;
-            color: #337EA9;
+            color: #379ad3;
             display: flex;
             justify-content:center;
             align-items:center;
             flex-direction:column;
             max-width: 95%;
             margin: auto;
-            border: 3px solid #337EA9;
+            border: 3px solid #379ad3;
             border-radius: 5px;
-            box-shadow: 2px 2px 1px 0px #337EA9;
+            box-shadow: 2px 2px 1px 0px #379ad3;
 
         }
 
